--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,10 @@ Imports:
   dplyr,
   tidyr,
   jsonlite
+Suggests:
+    tidytext,
+    textdata,
+    wordcloud2,
+    testthat (>= 3.0.0)
 RoxygenNote: 7.3.2
+Config/testthat/edition: 3
