--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: chatgptscrapeR
 Type: Package
 Title: An R package to scrape conversations from publicly shared ChatGPT links
-Version: 1.0.0
+Version: 2.0.0
 Author: sonsoleslp
 Maintainer: sonsoleslp, <sonsoles.lopez@uef.fi>
 Description: TBD
@@ -15,7 +15,8 @@ Imports:
   xml2,
   dplyr,
   tidyr,
-  jsonlite
+  jsonlite,
+  chromote
 Suggests:
     tidytext,
     textdata,
